--- a/paper/references.bib
+++ b/paper/references.bib
@@ -37,4 +37,13 @@
 }
 
 
+@Article{citeHughes,
+  author    = {Tegwyn Hughes},
+  title     = {5 Canadians Share The Smart Ways They’re Cutting Grocery Costs},
+  year      = {2024},
+  url       = {https://chatelaine.com/food/save-money-on-food/},
+}
+
+
+
 
