--- a/paper/references.bib
+++ b/paper/references.bib
@@ -7,6 +7,57 @@
   url = {https://www.R-project.org/},
 }
 
+@Article{citeNationalPost,
+  author    = {{The National Post}},
+  title     = {These grocery items are expected to be cheaper this fall in Canada},
+  year      = {2024},
+  url       = {https://nationalpost.com/news/canada/these-grocery-items-are-expected-to-be-cheaper-this-fall},
+  note      = {Accessed: 2024-12-03}
+}
+
+@Online{citeSobeys,
+  author    = {Sobeys},
+  title     = {Our brands},
+  year      = {2024},
+  url       = {https://corporate.sobeys.com/our-brands},
+  note      = {Accessed: 2024-12-03}
+}
+
+@Online{citePLMA,
+  author    = {{Private Label Manufacturers Association}},
+  title     = {Store Brand Facts},
+  year      = {2024},
+  url       = {https://plma.com/about_industry/store_brand_facts},
+  note      = {Accessed: 2024-12-03}
+}
+
+@Online{citeAppel,
+  author    = {Jeremy Appel},
+  title     = {Loblaw’s Great Canadian Grocery Gouge},
+  year      = {2024},
+  month     = {May},
+  url       = {https://jacobin.com/2024/05/loblaw-grocery-price-gouge-boycott},
+  note      = {Accessed: 2024-12-03}
+}
+
+
+@Article{citeTidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and
+      Winston Chang and Lucy D'Agostino McGowan and Romain François and
+      Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester
+      and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan
+      Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson
+      and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and
+      Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
+
 @Article{citeData,
   author    = {Jacob Filipp},
   title     = {Project Hammer},
@@ -44,6 +95,13 @@
   url       = {https://chatelaine.com/food/save-money-on-food/},
 }
 
+@online{citeConsumerReports,
+  author    = {{Consumer Reports}},
+  title     = {Why Are Brown Eggs More Expensive Than White Ones?},
+  year      = {2024},
+  url       = {https://www.consumerreports.org/health/food-shopping/why-are-brown-eggs-more-expensive-than-white-ones-a1141700310/},
+  note      = {Accessed: 2024-12-03}
+}
 
 
 
